[package]
name = "fastdiv"
version = "0.1.0"
edition = "2021"
authors = ["sarah <>"]
description = "Perform fast division by a runtime constant."
readme = "README.md"
repository = "https://github.com/kitegi/fastdiv/"
license = "MIT"
keywords = ["division", "arithmetic"]

[dependencies]
epserde = { version = "0.3.0", optional = true }
mem_dbg = { version = "0.1.3", optional = true }
serde = { version = "1.0.195", optional = true }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "fastdiv"
harness = false

[features]
epserde = ["dep:epserde"]
serde = ["dep:serde"]
mem_dbg = [ "dep:mem_dbg" ]
